crates/keron-lang/tests/corpus/errors/parse/match_arm_missing_arrow.snap
---
source: crates/keron-lang/tests/harness/mod.rs
assertion_line: 75
---
error: unexpected `1`, expected `=`
  --> 2:5
  |
2 |   1 1,
  |     ^
